--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.8.10",
 		"morgan": "~1.9.1",
-		"socket.io": "^2.3.0"
+		"socket.io": "^2.3.0",
+		"web-push": "^3.4.3"
 	}
 }
