--- a/appspec.yml
+++ b/appspec.yml
@@ -4,13 +4,13 @@ version: 0.0
 os: linux
 files:
   - source: /
-    destination: /home/ubuntu/build
+    destination: /home/ubuntu/meet-api
 hooks:
   BeforeInstall:
-    - location: /initialize.sh
-      runas: ubuntu
+    - location: /codepipeline-scripts/initialize.sh
+      runas: root
 
   ApplicationStart:
-    - location: /start.sh
-      runas: ubuntu
-      # ubuntu의 $HOME 환경변수를 이용해보려고 runas ubuntu
+    - location: /codepipeline-scripts/start.sh
+      runas: root
+      #ubuntu의 $HOME 환경변수를 이용해보려고 runas ubuntu
