--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
 		"start": "node ./bin/www"
 	},
 	"dependencies": {
+		"@firebase/messaging": "^0.6.4",
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
 		"debug": "~2.6.9",
@@ -17,6 +18,7 @@
 		"jsonwebtoken": "^8.5.1",
 		"mongoose": "^5.8.10",
 		"morgan": "~1.9.1",
+		"request": "^2.88.0",
 		"socket.io": "^2.3.0",
 		"web-push": "^3.4.3"
 	}
