--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 		"dotenv": "^8.2.0",
 		"ejs": "^3.0.1",
 		"express": "~4.16.1",
+		"fcm-node": "^1.5.2",
 		"http-errors": "~1.6.3",
 		"jade": "~1.11.0",
 		"jsonwebtoken": "^8.5.1",
