--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"@firebase/messaging": "^0.6.4",
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
+		"crypto": "^1.0.1",
 		"debug": "~2.6.9",
 		"dotenv": "^8.2.0",
 		"ejs": "^3.0.1",
