--- a/buildspec.yml
+++ b/buildspec.yml
@@ -13,6 +13,16 @@ phases:
       commands:
         - echo start downloading credentials from S3 bucket
         - aws s3 cp s3://umi0410-credentials/meet-api .
+  build:
+    runtime-version:
+      nodejs: 12
+      commands:
+        - echo start building
+  post_build:
+    runtime-version:
+      nodejs: 12
+      commands:
+        - echo start post_building
 
 artifacts:
   files:
