--- a/buildspec.yml
+++ b/buildspec.yml
@@ -10,7 +10,7 @@ phases:
   pre_build:
     commands:
       - echo start downloading credentials from S3 bucket
-      - aws s3 cp s3://umi0410-credentials/meet-api/.env .env
+      - aws s3 cp --recursive s3://umi0410-credentials/meet-api/ .
 
 artifacts:
   files:
