--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,10 +7,11 @@ phases:
     commands:
       - echo start installing ...
       - npm install
-  pre_build:
+  post_build:
     commands:
       - echo start downloading credentials from S3 bucket
       - aws s3 cp --recursive s3://umi0410-credentials/meet-api/ .
+      - cat test>test
 
 artifacts:
   files:
