--- a/buildspec.yml
+++ b/buildspec.yml
@@ -6,7 +6,7 @@ phases:
       nodejs: 12
     commands:
       - echo start installing ...
-      - npm install
+      # - npm install # 어차피 docker-compose에서 build할 때 알아서 npm install함.
   post_build:
     commands:
       - echo start downloading credentials from S3 bucket
