--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"nodemailer": "^6.4.2",
 		"request": "^2.88.0",
 		"socket.io": "^2.3.0",
-		"web-push": "^3.4.3"
+		"web-push": "^3.4.3",
+		"winston": "^3.2.1",
+		"winston-daily-rotate-file": "^4.4.2"
 	}
 }
