--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
 	"version": "0.0.0",
 	"private": true,
 	"scripts": {
-		"start": "node ./bin/www"
+		"start": "node ./bin/www",
+		"devrun": "env MEET_NODE_ENV=development nodemon ./bin/www"
 	},
 	"dependencies": {
 		"@firebase/messaging": "^0.6.4",
 		"cookie-parser": "~1.4.4",
 		"cors": "^2.8.5",
-		"crypto": "^1.0.1",
 		"debug": "~2.6.9",
 		"dotenv": "^8.2.0",
 		"ejs": "^3.0.1",
